Initial fix for whitespace handling. Issue #88.

--- a/src/themes/inc/defaultbase.less
+++ b/src/themes/inc/defaultbase.less
@@ -94,6 +94,7 @@ div.sceditor-dropdown div
 		height: 100% !important;
 		width: 100% !important;
 		.rounded(0);
+		z-index: 1004;
 	}
 
 	// Used for IE 6 as it has no position fixed support
